# tiliqua-webflash

./: .gitignore  .gitmodules  README.md  bitstreams.js  eslint.config.js  flash_core.py  index.html  pyproject.toml
.github/workflows/: deploy.yaml
bitstreams/: README.md
rs/manifest/src/: lib.py  lib.rs
scripts/: server.py
src/: archive-processing.js  coi-serviceworker.js  device-connection.js  flash_core.py  globals.js  index.html  main.js  pyodide-init.js  styles.css  ui-helpers.js
src/js/: browse-bitstreams.js  device-connection.js  flash-operations.js  globals.js  main.js  ui-helpers.js
tiliqua/flash/: __init__.py  archive_loader.py  openfpgaloader.py  spiflash_layout.py
